fix white (thus unseeable) header links on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -386,6 +386,7 @@ a:visited { color: #ED2939; }
 
   .site-nav .page-link {
     display: block;
+    color: #003366;
     text-align: right;
     line-height: 1.25;
     padding: 5px 10px;
